* index.html: Mention gcj -R as news.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -68,6 +68,19 @@ href="http://www.gnu.org/software/classpath/">GNU Classpath</a>.
 
 <table>
 <tr><td valign="top">
+<b>September 7, 2001</b>
+</td><td>
+Anthony Green of Red Hat has added a facility for compiling property
+files and other system resources into libraries and executables.
+These files are accessible to the gcj runtime via the new "core"
+protocol handler.  The gcj runtime places "core:/" at the end of the
+java.class.path, ensuring that compiled-in resource files are
+discovered and loaded when required.  This is a convenient feature for
+building and deploying libraries and executables with no external file
+dependencies.  See the "-R" option in the gcj manual for details.
+</td></tr>
+
+<tr><td valign="top">
 <b>August 27, 2001</b>
 </td><td>
 Tom Tromey has imported RMI into libgcj.  This RMI implementation was
