Update reference to bug reporting in the support instructions.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -197,12 +197,13 @@ disadvantages.</p>
     individuals providing support for GCC.  This alternative costs
     money, but is relatively likely to get results.</li>
 
-<li>Report the problem to gcc-bugs and hope that someone will be kind
+<li><a href="bugs.html">Report the problem to the GCC GNATS bug tracking system</a>
+    and hope that someone will be kind
     enough to fix it for you.  While this is certainly possible, and
     often happens, there is no guarantee that it will.  You should
-    not expect the same response from gcc-bugs that you would see
+    not expect the same response from this method that you would see
     from a commercial support organization since the people who read
-    gcc-bugs, if they choose to help you, will be volunteering their
+    GCC bug reports, if they choose to help you, will be volunteering their
     time.  This alternative will work best if you follow the directions
     on <a href="bugs.html">submitting bugreports</a>.</li>
 
