--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -656,7 +656,8 @@ it were done for all existing targets.  The basic idea is that</p>
 
 <p>Unfortunately, the technique is very poorly documented and may need
 extending to other conditional operations (setcc, movcc) as well.
-Contact Bernd Schmidt &lt;<a href="bernds@redhat.com">bernds@redhat.com</a>&gt;
+Contact Bernd
+Schmidt &lt;<a href="mailto:bernds@redhat.com">bernds@redhat.com</a>&gt;
 before beginning any work on this.</p>
 </li>
 
