ftp.yggdrasil.com has been unresponsive for weeks. Don't link it.

--- a/htdocs/egcs-1.0/caveats.html
+++ b/htdocs/egcs-1.0/caveats.html
@@ -8,8 +8,7 @@
 <ul>
   <li>EGCS has an integrated libstdc++, but does not have an integrated libg++.
   Furthermore old libg++ releases will not work with egc; HJ Lu has made a 
-  <a href="ftp://ftp.yggdrasil.com/private/hjl/libg++-2.8.1.2.tar.gz">
-  libg++ snapshot</a> available which may work with EGCS.
+  libg++-2.8.1.2 available which may work with EGCS.
   <br>Note most C++ programs only need libstdc++.
 
   <li>Note that using -pedantic or -Wreturn-type can cause an explosion in the
@@ -37,9 +36,6 @@
   <li>EGCS 1.0 may not work with Red Hat Linux 5.0 on all targets.  EGCS 1.0.x
   and later releases should work with Red Hat Linux 5.0.
 </ul>
-
-<p><a href="../index.html">Return to the GCC home page</a>
-<p><i>Last modified:  August 27, 1998</i>
 
 </body>
 </html>
