* done.html: Fix broken mailto: URL.
	* faq.html: Remove broken link to the FSF Copyright Assignment
	Forms.

--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -316,9 +316,7 @@ $ gij HelloWorld
 	<dd>
 	<p> Certainly. However, in many cases, if you wanted to contribute the 
 	code back into the official libgcj distribution, we would require that the 
-	original author(s) 
-	<A HREF="http://www.gnu.org/software/gcc/fsf-forms/assignment-instructions.html">
-	assign copyright</A> to the Free Software Foundation.  
+	original author(s) assign copyright to the Free Software Foundation.  
 	<p> As of March 6, 2000, libgcj has been relicenced, and copyright has
 	been assigned to the <A HREF="http://www.gnu.org/">FSF</A>. This allows 
 	us to share and merge much of the libgcj codebase with the 
