--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -125,8 +125,9 @@
 	<td>The <A
 	    HREF="http://resam.univ-lyon1.fr/~tamanoir">Tamanoir</A>
 	    page. <A HREF="http://gcc.gnu.org/ml/java/2001-01/msg00069.html">
-	    Entry</A> submitted by <A HREF="jpgelas@lhpcm.univ-lyon1.fr">
-	    Jean Patrick Gelas</A>.
+	    Entry</A> submitted by
+            <a href="mailto:jpgelas@lhpcm.univ-lyon1.fr">Jean Patrick
+            Gelas</a>.
       </tr>
       <!-- End Tamanoir -->
       <!-- Fluid Dynamics -->
