Use an absolute link for all /onlinedocs.

--- a/htdocs/bugs.html
+++ b/htdocs/bugs.html
@@ -257,10 +257,10 @@ available.  This is fixed in GCC 2.95.3 and GCC 3.0.</li>
 
 <h2><a name="fortran">Fortran</a></h2>
 
-<p> Fortran bugs are documented in the G77 manual rather than
+<p>Fortran bugs are documented in the G77 manual rather than
 explicitly listed here.  Please see 
-<a href="onlinedocs/g77_bugs.html">"Known Causes of Trouble with GNU
-Fortran"</a> in the <a href="onlinedocs/g77_toc.html">G77 manual.</a>
+<a href="http://gcc.gnu.org/onlinedocs/g77_bugs.html">Known Causes of
+Trouble with GNU Fortran</a> in the G77 manual.</p>
 
 <hr>
 
