Link and markup fixes.

--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -175,8 +175,8 @@ them in the GCC CVS tree before getting them installed in the master
 tree.</li>
 
 <li>boehm-gc: The master sources are at <a
-href="http://www.hpl.hp.com/personal/Hans_Boehm/gc/">www.hpl.hp.com/personal/Hans_Boehm/gc</a>.
-Patches should be sent to <a href="boehm@acm.org">boehm@acm.org</a>,
+href="http://www.hpl.hp.com/personal/Hans_Boehm/gc/">www.hpl.hp.com/personal/Hans_Boehm/gc/</a>.
+Patches should be sent to <a href="mailto:boehm@acm.org">boehm@acm.org</a>,
 but it's acceptable to check them in the GCC CVS tree before getting
 them installed in the master tree.</li>
 
