Fix several broken and relative links from the egcs era.

--- a/htdocs/egcs-1.1/egcs-1.1-test.html
+++ b/htdocs/egcs-1.1/egcs-1.1-test.html
@@ -16,9 +16,8 @@
        appreciated.
 
        <br>We are testing a development version of glibc.  The sources for
-       testing can be found on the 
-       <a href="ftp://egcs.cygnus.com/pub/egcs/infrastructure/egcs-glibc-test.tar.gz">egcs ftp server</a>
-
+       testing can be found on the egcs ftp server.
+ 
        <br>x86 has successfully passed the glibc test.
        <br>ppc has passed using different versions of the glibc sources
        <br>alpha "passed" (failures were glibc problems, not compiler problems).
@@ -67,9 +66,6 @@
           <li> SPARC
        </ul>
 </ul>
-
-<hr>
-<i>Last modified on July 28, 1999.</i>
 
 </body>
 </html>
