--- a/htdocs/egcs-1.1/egcs-1.1.html
+++ b/htdocs/egcs-1.1/egcs-1.1.html
@@ -33,8 +33,7 @@ in older versions of EGCS.
   <li> Fixes for the /tmp symlink race security problems.
   <li> New targets including mips16, arm-thumb and 64 bit PowerPC.
   <li> Improvements to GNU Fortran (<code>g77</code>) compiler and
-  runtime library made since <a href="../onlinedocs/g77_news.html">
-  <code>g77</code> version 0.5.23</a>.
+  runtime library made since <code>g77</code> version 0.5.23.
 </ul>
 
 <p>See the <a href="features.html">new features</a> page for a more complete
@@ -64,10 +63,6 @@ provided by Stanford)</a>
 
 <p>The EGCS 1.1 release is also available on many mirror sites.<br>
 <a href="../mirrors.html"> Goto mirror list to find a closer site</a>
-
-
-<hr>
-<i>Last modified on September 4, 1999.</i>
 
 </body>
 </html>
