--- a/htdocs/egcs-1.1/egcs-1.1.2.html
+++ b/htdocs/egcs-1.1/egcs-1.1.2.html
@@ -180,8 +180,8 @@ will update those pages as new information becomes available.
 
 <p> The EGCS project would like to thank the numerous people that have
 contributed new features, test results, bugfixes, etc.  This 
-<a href="../thanks.html">amazing group of volunteers</a> is what makes
-EGCS successful.
+<a href="http://gcc.gnu.org/thanks.html">amazing group of volunteers</a>
+is what makes EGCS successful.
 
 <p>And finally, we can't in good conscience fail to mention some
 <a href="caveats.html">caveats</a> to using EGCS 1.1.2.
@@ -195,9 +195,6 @@ provided by Stanford)</a>
 
 <p>The EGCS 1.1.2 release is also available on many
 <a href="../mirrors.html">mirror sites</a>.
-
-<hr>
-<i>Last modified on July 28, 1999.</i>
 
 </body>
 </html>
