ftp.freesoftware.com has been dead for an extensive period and most probably won't reappear anytime soon.

--- a/htdocs/snapshots.html
+++ b/htdocs/snapshots.html
@@ -35,9 +35,7 @@ comments in contrib/gcc_update. <BR> The file .brik provides a list of
 checksums of files in the snapshot, that may be checked using<BR>
 brik -C &lt; .brik</p>
 
-<p>Please use our
-<a href="ftp://ftp.freesoftware.com/pub/sourceware/gcc/snapshots/">main
-mirror site</a> or any of our other <a href="mirrors.html">mirrors</a>.</p>
+<p>Please use our <a href="mirrors.html">mirror sites</a>.</p>
 
 <p>In addition, some of our contributors also provide pre-built binaries
 of our current development sources on a regular basis:</p>
