Remark that this document is kept for historical reference only. Fix a broken link (for mirror sites).

--- a/htdocs/gcc-3.0/criteria.html
+++ b/htdocs/gcc-3.0/criteria.html
@@ -5,6 +5,10 @@
 </head>
 
 <body>
+
+<p><big>This document is obsolete and kept for historical reference
+only.</big></p>
+
 <h1 align="center">GCC 3.0 Release Criteria</h1>
 
 <p>This page provides the release criteria for GCC 3.0.  GCC 3.0 will
@@ -79,8 +83,8 @@ be completed before GCC 3.0 is released:
     <p>High-priority open bugs in GNATs will be fixed before the
        GCC 3.0 release.</p>
 <li><p>Installation Documentation</p>
-    <p>Merge <a href="../install/">on-line installation
-       documentation</a>, <code>gcc/install.texi</code>, past changes
+    <p>Merge on-line installation documentation,
+       <code>gcc/install.texi</code>, past changes
        to <code>gcc/INSTALL</code> made in the CVS tree without
        realising that it was a generated file that were subsequently
        overridden when it was regenerated, the old system-specific
