* libgcj-classpath-compare.html: Rebuilt. 	* scripts/gen-classpath-compare: Don't put color in <body>.  Added 	<html> tag.  Use <em> instead of <b>, and <code> instead of <tt>.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -1,19 +1,20 @@
+<html>
 <head>
 <title>libgcj -vs- Classpath</title>
 </head>
-<body bgcolor="#ffffff">
+<body>
 <h1>libgcj -vs- Classpath</h1>
 
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <a
-href="scripts/gen-classpath-compare"><tt>gen-classpath-compare</tt></a>
+href="scripts/gen-classpath-compare"><code>gen-classpath-compare</code></a>
 script on
-2001-09-10.
+2001-09-14.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
-has been reintroduced.  <b>Note that such differences cannot be
-automatically merged.</b> Any merging must be done manually; some
+has been reintroduced.  <em>Note that such differences cannot be
+automatically merged.</em> Any merging must be done manually; some
 differences are currently required.</p>
 
 <table border=1 width="100%">
@@ -49,6 +50,7 @@ differences are currently required.</p>
 <tr> <td>java.lang.Character</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.lang.Class</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.lang.ClassLoader</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
+<tr> <td>java.lang.CloneNotSupportedException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.CloneNotSupportedException.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.Cloneable</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.lang.Comparable</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.lang.Compiler</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
@@ -285,3 +287,4 @@ differences are currently required.</p>
 <tr> <td>javax.naming.spi.ObjectFactory</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td bgcolor="#eeeeaa">No</td> </tr>
 </table>
 </body>
+</html>
