* old-news.html: Remove dead link. 	* build-snapshot.html: Link to GCC snapshot page.

--- a/htdocs/java/build-snapshot.html
+++ b/htdocs/java/build-snapshot.html
@@ -19,11 +19,7 @@
 <pre>
 General gcj download information can be found <A HREF="download.html">here</A>.
 
-1a. Get a GCC snapshots from:
-
-  <a href="http://gcc.gnu.org/snapshots.html">ftp://ftp.freesoftware.com/pub/sourceware/gcc/snapshots/</a>
-
-They are made about once a week. 
+1a. <a href="../snapshots.html">Get a GCC snapshot.</a>
 
 1b. Or get GCC from cvs, see
 
