--- a/htdocs/java/old-news.html
+++ b/htdocs/java/old-news.html
@@ -36,8 +36,7 @@ targets!
 <b>March 7, 2001</b>
 </td><td>
 The first snapshot from the code branch that will become GCC 3.0 is 
-<A HREF="ftp://ftp.freesoftware.com/pub/sourceware/gcc/snapshots/">
-now available</A>. Snapshots from this branch will be made weekly. These
+now available. Snapshots from this branch will be made weekly. These
 include everything you need to build and run GCJ, and should be much
 more stable than the main development tree -- so try them out and help us
 find bugs!
