2001-09-14  Phil Edwards  <pme@sources.redhat.com>
	* index.html:  Fix broken link.  Mention new versioning scheme to
	minimize future bug reports.

--- a/htdocs/libstdc++/index.html
+++ b/htdocs/libstdc++/index.html
@@ -3,7 +3,7 @@
  <META NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
  <TITLE>Standard C++ Library v3</TITLE>
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: index.html,v 1.12 2001/06/25 20:12:35 pme Exp $ -->
+<!-- $Id: index.html,v 1.13 2001/08/03 14:17:55 mrs Exp $ -->
 </HEAD>
 <BODY>
 
@@ -13,7 +13,9 @@
 <H2>What... is your name?</H2>
 
 <P>The GNU Standard C++ Library v3, or libstdc++-2.90.x/2.9x.  Also,
-   libstdc++-v3 is the most common nickname.
+   libstdc++-v3 is the most common nickname.  Since the release of GCC 3.0,
+   the library snapshots/tarballs/etc will have a major version number
+   of 3 rather than 2.
 </P>
 
 <H2>What... is your quest?</H2>
@@ -25,10 +27,13 @@
 
 <H2>What... is the airspeed velocity of an unladen swallow?</H2>
 
-<P><A HREF="http://www.stone-dead.asn.au/movies/holy-grail/grail-23.htm">African or European?</A></P>
+<P><A HREF="http://www.stone-dead.asn.au/movies/holy-grail/scene-23.htm">African or European?</A></P>
 <!-- Anyone who hasn't seen Holy Grail shouldn't be programming... how can you
      understand procedural logic if you haven't seen the witch-burning scene?
-     (Replace 'scene-23' with 'scene-05' for the transcript.)
+     (Replace 'scene-23' with 'scene-05' for the transcript of that scene.)
+     NOTA BENE:  This link breaks often, usually 'scene' and 'grail' get flip-
+     flopped a lot.  If it breaks, try the appropriate flip-flop, and if that
+     works send an email to pedwards/pme (check the archives for an address).
 -->
 
 <HR>
