State requirement for documentation for changes to documented front-end and back-end interfaces.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -53,7 +53,9 @@ on file.</p>
        also add documentation for that option to the GCC manual.
        Similarly, if it changes the behavior of an existing command
        line option or other documented behavior, the patch must update
-       the documentation.</li>
+       the documentation.  Documentation is also required for any
+       changes or additions to the parts of the front-end and back-end
+       interfaces documented in the manual (such as new target macros).</li>
   <li> It is strongly recommended the patch should add testcases for
        any new features added and any bugs fixed to the testsuite, if
        not already there.  (You will of course have tested any new
