http://www.netwinder.org/build/gcc.html will go away soon; do not link it.

--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -93,12 +93,9 @@ does that check, and run it against the entire test suite.</p>
 
 <li>Set up more autobuilders.
 
-<p>We already have two autobuilders: Geoff Keating's <a
-href="http://www.cygnus.com/~geoffk/gcc-regression/">gcc-regression</a>,
-and the netwinder.org <a
-href="http://www.netwinder.org/build/gcc.html">AutoBuild system</a>.
-Geoff's system is better known, because it nags people in e-mail when
-they break the tree.</p>
+<p>We already have two autobuilders by Geoff Keating (see <a
+href="http://www.cygnus.com/~geoffk/gcc-regression/">gcc-regression</a>),
+which nags people in e-mail when they break the tree.</p>
 
 <p>We'd like to have a similar setup for other platforms.  At the
 least we should have one for each of the primary evaluation platforms
