Explain port maintainers rights.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -94,11 +94,18 @@ the appropriate policies.</p>
   developers have global write permission over the entire
   repository.</dd>
 
-  <dt>Localized write permission.</dt> <dd>This is for people who have
+  <dt>Localized write permission.</dt> <dd><p>This is for people who have
   primary responsibility for ports, front ends, or significant hunks
   of code in the compiler.  These folks are allowed to make changes in
   code they maintain without going through any kind of approval
-  process.</dd>
+  process.</p>
+
+  <p>
+  Maintainers of a port maintain the files in config/&lt;port&gt;/,
+  the configure fragments for the port, documentation for the port and
+  test cases for features or bugs specific to this port.  Port
+  maintainers do not have approval rights in other files.</p>
+  </dd>
 
   <dt>Write after approval.</dt> <dd>This is folks that make regular
   contributions, but do not fall into one of the two previous
