We only have one autobuilder. By Rod Stewart <stewart@lab43.org>.

--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -93,7 +93,7 @@ does that check, and run it against the entire test suite.</p>
 
 <li>Set up more autobuilders.
 
-<p>We already have two autobuilders by Geoff Keating (see <a
+<p>We already have an autobuilder by Geoff Keating (see <a
 href="http://www.cygnus.com/~geoffk/gcc-regression/">gcc-regression</a>),
 which nags people in e-mail when they break the tree.</p>
 
