Change markup to avoid superflous leading blank in anchor text.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -87,8 +87,8 @@
   is a read-only, relatively low volume list which tracks checkins to
   the GCC webpages CVS repository.</li>
 
-  <li><b><a href="http://gcc.gnu.org/ml/gcc-regression/">
-  gcc-regression</a></b> is a read-only moderate volume list where regression
+  <li><b><a href="http://gcc.gnu.org/ml/gcc-regression/">gcc-regression</a></b>
+  is a read-only moderate volume list where regression
   results for the GCC compilers are posted.</li>
 
   <li><b><a href="http://gcc.gnu.org/ml/java-prs/">java-prs</a></b>
