2001-09-17  Phil Edwards  <pme@gcc.gnu.org>
	* download.html:  HTML to XHTML change.  Lowercase tags.
	* footer.ihtml:  Likewise.
	* header.ihtml:  Likewise.
	* index.html:  Likewise.
	* status.html:  Likewise.
	* thanks.html:  Likewise.

--- a/htdocs/libstdc++/download.html
+++ b/htdocs/libstdc++/download.html
@@ -1,53 +1,53 @@
-<HTML>
-<HEAD>
- <META NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
- <TITLE>Standard C++ Library v3</TITLE>
-<LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: download.html,v 1.12 2000/12/03 23:35:09 jsm28 Exp $ -->
-</HEAD>
-<BODY>
+<html>
+<head>
+ <meta NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
+ <title>Standard C++ Library v3</title>
+<link REL=StyleSheet HREF="lib3styles.css">
+<!-- $Id: download.html,v 1.13 2001/02/20 00:43:57 pme Exp $ -->
+</head>
+<body>
 
 <!--#include virtual="/libstdc++/header.ihtml"-->
 
 
-<H3>Getting the sources by FTP or CVS</H3>
+<h3>Getting the sources by FTP or CVS</h3>
 
 <!-- The <URL:foo> syntax is the standard way of writing such things.  No
      link to the FTP site is given directly, encouraging mirror usage.
 -->
-<P>Get the snapshot archive via FTP from
-   <TT>&lt;URL:ftp://gcc.gnu.org/pub/gcc/libstdc++/&gt;</TT>.
+<p>Get the snapshot archive via FTP from
+   <code>&lt;URL:ftp://gcc.gnu.org/pub/gcc/libstdc++/&gt;</code>.
    You will almost certainly need to use one of the 
-   <A HREF="http://gcc.gnu.org/mirrors.html">mirror sites</A>
+   <a href="http://gcc.gnu.org/mirrors.html">mirror sites</a>
    due to the extremely heavy load on the main server.
-</P>
+</p>
 
-<P>The master CVS repository for libstdc++-v3 is now a part of the gcc
-   repository.  As such, checking out the <TT>gcc</TT> module includes
+<p>The master CVS repository for libstdc++-v3 is now a part of the gcc
+   repository.  As such, checking out the <code>gcc</code> module includes
    the current libstdc++-v3 development sources.  To check out
-   libstdc++-v3 only, use <TT>libstdc++-v3</TT> instead of <TT>gcc</TT>
+   libstdc++-v3 only, use <code>libstdc++-v3</code> instead of <code>gcc</code>
    as the module.
-</P>
-   <UL>
-     <LI>Read-only CVS repository is available by anonymous CVS.  Directions 
-         are <A HREF="http://gcc.gnu.org/cvs.html">here</A>.  You can also
+</p>
+   <ul>
+     <li>Read-only CVS repository is available by anonymous CVS.  Directions 
+         are <a href="http://gcc.gnu.org/cvs.html">here</a>.  You can also
          use anonymous CVS from one of the mirrors of the CVS repository.
-     <LI>Read-write CVS repository is available by authorized CVS via SSH.
-         Directions are <A HREF="http://gcc.gnu.org/cvswrite.html">here</A>.
-   </UL>
-<P>Once you have the GCC sources checked out over CVS, you can use the
-   <CODE>contrib/gcc_update</CODE> script to retrieve the latest changes, and
+     <li>Read-write CVS repository is available by authorized CVS via SSH.
+         Directions are <a href="http://gcc.gnu.org/cvswrite.html">here</a>.
+   </ul>
+<p>Once you have the GCC sources checked out over CVS, you can use the
+   <code>contrib/gcc_update</code> script to retrieve the latest changes, and
    automatically update the timestamps of certain files.  With the
    timestamps updated, you won't need autoconf or the other tools (unless
    you make changes, obviously).
-</P>
+</p>
 
-<P>You can also
-<A HREF="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/libstdc++-v3?cvsroot=gcc">browse 
-   the CVS repository over the web</A>.
-</P>
+<p>You can also
+<a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/libstdc++-v3?cvsroot=gcc">browse 
+   the CVS repository over the web</a>.
+</p>
 
 
 <!--#include virtual="/libstdc++/footer.ihtml"-->
-</BODY>
-</HTML>
+</body>
+</html>
