--- a/htdocs/libstdc++/index.html
+++ b/htdocs/libstdc++/index.html
@@ -1,33 +1,33 @@
-<HTML>
-<HEAD>
- <META NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
- <TITLE>Standard C++ Library v3</TITLE>
-<LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: index.html,v 1.14 2001/09/15 00:28:28 pme Exp $ -->
-</HEAD>
-<BODY>
+<html>
+<head>
+ <meta NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
+ <title>Standard C++ Library v3</title>
+<link REL=StyleSheet HREF="lib3styles.css">
+<!-- $Id: index.html,v 1.15 2001/09/17 15:51:48 pme Exp $ -->
+</head>
+<body>
 
 <!--#include virtual="/libstdc++/header.ihtml"-->
 
 
-<H2>What... is your name?</H2>
+<h2>What... is your name?</h2>
 
-<P>The GNU Standard C++ Library v3, or libstdc++-2.90.x/2.9x.  Also,
+<p>The GNU Standard C++ Library v3, or libstdc++-2.90.x/2.9x.  Also,
    libstdc++-v3 is the most common nickname.  Since the release of GCC 3.0,
    the library snapshots/tarballs/etc will have a major version number
    of 3 rather than 2.
-</P>
+</p>
 
-<H2>What... is your quest?</H2>
+<h2>What... is your quest?</h2>
 
-<P>This is an ongoing project to implement the ISO 14882 Standard
+<p>This is an ongoing project to implement the ISO 14882 Standard
    C++ Library as described in chapters 17 through 27 and Annex D.
-   <STRONG>Participation is welcome!</STRONG>
-</P>
+   <strong>Participation is welcome!</strong>
+</p>
 
-<H2>What... is the airspeed velocity of an unladen swallow?</H2>
+<h2>What... is the airspeed velocity of an unladen swallow?</h2>
 
-<P><A HREF="http://www.stone-dead.asn.au/movies/holy-grail/scene-23.html">African or European?</A></P>
+<p><a href="http://www.stone-dead.asn.au/movies/holy-grail/scene-23.html">African or European?</a></p>
 <!-- Anyone who hasn't seen Holy Grail shouldn't be programming... how can you
      understand procedural logic if you haven't seen the witch-burning scene?
      (Replace 'scene-23' with 'scene-05' for the transcript of that scene.)
@@ -36,51 +36,51 @@
      works send an email to pedwards/pme (check the archives for an address).
 -->
 
-<HR>
+<hr>
 
-<H3>News</H3>
+<h3>News</h3>
 
-<DL>
- <DT>2001-06-18
- <DD> First major compiler release using libstdc++-v3 by default,
-   <A HREF="http://gcc.gnu.org/gcc-3.0/gcc-3.0.html">GCC 3.0</A>.
- <DT>2001-04-06
- <DD> Eleventh snapshot release, <A HREF="download.html">libstdc++-2.92.tar.gz</A>.
- <DT>2000-11-17
- <DD> Tenth snapshot release, libstdc++-2.91.tar.gz.
- <DT>2000-11-12
- <DD> Officially
-   <A HREF="http://gcc.gnu.org/ml/gcc/2000-11/msg00522.html">made 
-   libstdc++-v3 the default C++ library</A>.
- <DT>2000-04-21
- <DD> Officially merged library sources into GCC.
- <DT>2000-03-24 
- <DD> Ninth snapshot release, libstdc++-2.90.8.tar.gz.
- <DT>1999-12-21
- <DD> Eighth snapshot release, libstdc++-2.90.7.tar.gz.
- <DT>1999-08-04
- <DD> Seventh snapshot release, libstdc++-2.90.6.tar.gz.
- <DT>1999-05-18
- <DD> Sixth snapshot release, libstdc++-2.90.5.tar.gz.
- <DT>1999-03-19
- <DD> Fifth snapshot release, libstdc++-2.90.4.tar.gz. 
- <DT>1998-12-31
- <DD> Fourth snapshot release, libstdc++-2.90.3.tar.gz.
- <DT>1998-11-04
- <DD> Design, feature checklist and readme documents updated.  Also see
+<dl>
+ <dt>2001-06-18
+ <dd> First major compiler release using libstdc++-v3 by default,
+   <a href="http://gcc.gnu.org/gcc-3.0/gcc-3.0.html">GCC 3.0</a>.
+ <dt>2001-04-06
+ <dd> Eleventh snapshot release, <a href="download.html">libstdc++-2.92.tar.gz</a>.
+ <dt>2000-11-17
+ <dd> Tenth snapshot release, libstdc++-2.91.tar.gz.
+ <dt>2000-11-12
+ <dd> Officially
+   <a href="http://gcc.gnu.org/ml/gcc/2000-11/msg00522.html">made 
+   libstdc++-v3 the default C++ library</a>.
+ <dt>2000-04-21
+ <dd> Officially merged library sources into GCC.
+ <dt>2000-03-24 
+ <dd> Ninth snapshot release, libstdc++-2.90.8.tar.gz.
+ <dt>1999-12-21
+ <dd> Eighth snapshot release, libstdc++-2.90.7.tar.gz.
+ <dt>1999-08-04
+ <dd> Seventh snapshot release, libstdc++-2.90.6.tar.gz.
+ <dt>1999-05-18
+ <dd> Sixth snapshot release, libstdc++-2.90.5.tar.gz.
+ <dt>1999-03-19
+ <dd> Fifth snapshot release, libstdc++-2.90.4.tar.gz. 
+ <dt>1998-12-31
+ <dd> Fourth snapshot release, libstdc++-2.90.3.tar.gz.
+ <dt>1998-11-04
+ <dd> Design, feature checklist and readme documents updated.  Also see
       new &quot;Notes&quot; section.
- <DT>1998-10-30
- <DD> Third snapshot release, libstdc++-2.90.2.tar.gz.
- <DT>1998-07-31
- <DD><A HREF="http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/DESIGN">Design
+ <dt>1998-10-30
+ <dd> Third snapshot release, libstdc++-2.90.2.tar.gz.
+ <dt>1998-07-31
+ <dd><a href="http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/DESIGN">Design
      document available</a>
- <DT>1998-07-24
- <DD> Second snapshot release, libstdc++-2.90.1.tar.gz. 
- <DT>1998-07-15
- <DD> First snapshot release.
-</DL>
+ <dt>1998-07-24
+ <dd> Second snapshot release, libstdc++-2.90.1.tar.gz. 
+ <dt>1998-07-15
+ <dd> First snapshot release.
+</dl>
 
 
 <!--#include virtual="/libstdc++/footer.ihtml"-->
-</BODY>
-</HTML>
+</body>
+</html>
