--- a/htdocs/libstdc++/status.html
+++ b/htdocs/libstdc++/status.html
@@ -1,69 +1,69 @@
-<HTML>
-<HEAD>
- <META NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
- <TITLE>Standard C++ Library v3</TITLE>
-<LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: status.html,v 1.13 2001/05/25 20:27:08 pme Exp $ -->
-</HEAD>
-<BODY>
+<html>
+<head>
+ <meta NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
+ <title>Standard C++ Library v3</title>
+<link REL=StyleSheet HREF="lib3styles.css">
+<!-- $Id: status.html,v 1.14 2001/06/25 20:12:35 pme Exp $ -->
+</head>
+<body>
 
 <!--#include virtual="/libstdc++/header.ihtml"-->
 
 
-<H3>Status</H3>
+<h3>Status</h3>
 
-<HR>
-<P><STRONG>If you have downloaded GCC 3.0, STOP.  You have the most
+<hr>
+<p><strong>If you have downloaded GCC 3.0, STOP.  You have the most
    recent libstdc++-v3 code available.  All library snapshots are older
-   than the code contained in GCC 3.0.</STRONG>  We will continue to
+   than the code contained in GCC 3.0.</strong>  We will continue to
    roll library snapshots on a pseudo-independant basis (at least, that's
    the plan).  Once we have released another snapshot, superceding the
    version in GCC 3.0, this paragraph will be replaced with that information.
-</P>
-<HR>
+</p>
+<hr>
 
-<P>Compiling this library requires sources of a recent version of GCC.
+<p>Compiling this library requires sources of a recent version of GCC.
    We suggest using CVS GCC.  The latest library snapshot has also been
-   tested with this recent GCC snapshot:  <STRONG>2001-05-14</STRONG>,
+   tested with this recent GCC snapshot:  <strong>2001-05-14</strong>,
    which is available from a
-   <A HREF="http://gcc.gnu.org/mirrors.html">GCC mirror site</A> under the
+   <a href="http://gcc.gnu.org/mirrors.html">GCC mirror site</a> under the
    snapshots directory as &quot;2001-05-14/gcc[-g++]-20010514.tar.gz&quot;,
    or via CVS using the &quot;gcc_ss_20010514&quot; checkout tag.
-</P>
+</p>
 
-<P>The most recent version of this library that will build with
-   <A HREF="http://gcc.gnu.org/gcc-2.95/gcc-2.95.2.html">GCC 2.95.2</A>
+<p>The most recent version of this library that will build with
+   <a href="http://gcc.gnu.org/gcc-2.95/gcc-2.95.2.html">GCC 2.95.2</a>
    is the ninth snapshot release,
-   <A HREF="download.html">libstdc++-2.90.8.tar.gz</A>.
-</P>
+   <a href="download.html">libstdc++-2.90.8.tar.gz</a>.
+</p>
 
-<P>If you are using
-   <A HREF="http://gcc.gnu.org/gcc-2.95/gcc-2.95.3.html">GCC 2.95.3</A>,
-   then the most recent usable version of this library is <EM>still</EM>
+<p>If you are using
+   <a href="http://gcc.gnu.org/gcc-2.95/gcc-2.95.3.html">GCC 2.95.3</a>,
+   then the most recent usable version of this library is <em>still</em>
    the ninth snapshot release,
-   <A HREF="download.html">libstdc++-2.90.8.tar.gz</A>, <EM>and</EM> you
+   <a href="download.html">libstdc++-2.90.8.tar.gz</a>, <em>and</em> you
    will need to apply
-   <A HREF="libstdc++-2.90.8-compat-gcc-2.95.3.diff">this patch</A> to
+   <a href="libstdc++-2.90.8-compat-gcc-2.95.3.diff">this patch</a> to
    mirror the changes made in gcc/glibc.
-</P>
+</p>
 
-<P>New things that work are in the latest
-   <A HREF="http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/RELEASE-NOTES">release notes</A>.
-</P>
+<p>New things that work are in the latest
+   <a href="http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/RELEASE-NOTES">release notes</a>.
+</p>
 
-<P>Known problems and bugs, which will force us to actually keep this
+<p>Known problems and bugs, which will force us to actually keep this
    file up-to-date, can be found in <A
-   HREF="http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/BUGS">bugs</A>.
-</P>
+   HREF="http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/BUGS">bugs</a>.
+</p>
 
-<P>Things that need to be done and are looking for volunteers can be found
-   in: <A HREF="http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/TODO">pick me</A>.
-</P>
+<p>Things that need to be done and are looking for volunteers can be found
+   in: <a href="http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/TODO">pick me</a>.
+</p>
 
-<P>This release has been tested with CVS gcc on the following
+<p>This release has been tested with CVS gcc on the following
    platforms.  The configuration of --enable-debug (using -O0) was tested.
    Here are the results for snapshots 2.N:
-</P>
+</p>
 
 <TABLE CELLSPACING=4 CELLPADDING=1>
 
@@ -159,11 +159,11 @@
 </TABLE>
 
 
-<P>Note 2: All Solaris toolchains were configured with --with-gnu-ld
+<p>Note 2: All Solaris toolchains were configured with --with-gnu-ld
 --with-gnu-as --with-gcc. (That's a lot of --with's...)
-</P>
+</p>
 
 
 <!--#include virtual="/libstdc++/footer.ihtml"-->
-</BODY>
-</HTML>
+</body>
+</html>
