--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -76,6 +76,11 @@
 </tr>
 
 <tr>
+<td>i386-pc-solaris2.6</td>
+<td>Successful</td>
+</tr>
+
+<tr>
 <td>i386-pc-solaris2.8</td>
 <td>Successful</td>
 </tr>
