--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -86,6 +86,11 @@
 </tr>
 
 <tr>
+<td>i386-redhat-linux-gnu</td>
+<td>Successful</td>
+</tr>
+
+<tr>
 <td>i386-unknown-freebsd4.3</td>
 <td>Successful</td>
 </tr>
