--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -112,7 +112,17 @@
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Successful (Caldera 2.4, glibc 2.1.2)</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Successful (Red Hat 6.2; Red Hat 7.1)</td>
+</tr>
+
+<tr>
+<td>ia64-unknown-linux</td>
+<td>Successful (Red Hat 7.1.94, glibc 2.2.4)</td>
 </tr>
 
 <tr>
