--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -38,7 +38,7 @@
 <A HREF="http://gcc.gnu.org/install/">Installation</A><BR>
 <A HREF="http://gcc.gnu.org/install/specific.html">Platforms</A><BR>
 <A HREF="onlinedocs/">Manual</A><BR>
-<A HREF="readings.html">Readings</A>
+<A HREF="readings.html">Further Readings</A>
 </P>
 </TD></TR>
 </TABLE></TD></TR>
@@ -75,7 +75,6 @@
 <A HREF="rsync.html">Rsync read access</A><BR>
 <A HREF="cvsup.html">CVSup mirrors</A><BR>
 <A HREF="cvswrite.html">CVS write access</A><BR>
-<A HREF="gnatswrite.html">GNATS write access</A><BR>
 </P>
 </TD></TR>
 </TABLE></TD></TR>
@@ -87,8 +86,9 @@
 </TD></TR>
 <TR BGCOLOR="#FFFFBB"><TD>
 <P>
-<A HREF="bugs.html">Reporting...</A><BR>
+<A HREF="bugs.html">Report a bug</A><BR>
 <A HREF="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;user=guest&amp;password=guest&amp;cmd=login">GNATS</A><BR>
+<A HREF="gnatswrite.html">...write access</A><BR>
 <A HREF="bugs.html#known">Known bugs</A>
 </P>
 <HR>
