--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -61,6 +61,11 @@
 </tr>
 
 <tr>
+<td>hppa1.1-hp-hpux11.00</td>
+<td>Successful (C and C++)</td>
+</tr>
+
+<tr>
 <td>hppa2.0-hp-hpux10.20</td>
 <td>Successful</td>
 </tr>
