--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -122,6 +122,11 @@
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Successful (Mandrake 8.0, glibc 2.2.4)</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Successful (Red Hat 6.2; Red Hat 7.1)</td>
 </tr>
 
