Added sparcv9-sun-solaris2.7, with note that C and C++ can be built using a 32->64 bit cross compiler.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -185,6 +185,11 @@
 <td>Successful</td>
 </tr>
 
+<tr>
+<td>sparcv9-sun-solaris2.7 (64 bit)</td>
+<td>Successful (C and C++, built with 32-&gt;64 bit cross compiler)</td>
+</tr>
+
 </table>
 
 </body>
