Add link for Unicode Normalization Forms. By Rodney Brown <rbrown64@csc.com.au>.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -466,7 +466,9 @@ papers, hot list pages, potential software/shareware, all known companies, etc.:
   <li><a href="http://www.opengroup.org/">The Open Group</a> has quite a bit
   on POSIX etc.
                                                           
-  <li><a href="http://www.unicode.org">Unicode</a></li>
+  <li><a href="http://www.unicode.org">Unicode</a> and <a
+  href="http://www.unicode.org/unicode/reports/tr15/">Unicode Normalization
+  Forms</a>.</li>
 
 </ul>
  
