--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -85,7 +85,7 @@ the web pages.
 <dt>Bootstrapping and testing</dt>
 <dd>
 A list of targets where the patch survived a bootstrap of GCC.  A
-bootstrap on least one host is required for any non-trivial change.  A
+bootstrap on at least one host is required for any non-trivial change.  A
 full GCC testsuite run is also required.  With your patch, provide a
 list of hosts where the GCC testsuite was run, including an analysis
 of any regressions.  Documentation changes do not require a bootstrap,
