This fixes lots of broken and redirected links.

--- a/htdocs/extensions.html
+++ b/htdocs/extensions.html
@@ -24,7 +24,7 @@ achieves substantial speed improvements over GCC.</p>
 <p>This is an experimental port for the 8bit ATMEL AVR micro
 controllers.</p>
 
-<h2><a href="http://home.worldnet.fr/stcarrez/m68hc11_port.html">M68HC11
+<h2><a href="http://home.worldnet.fr/~stcarrez/m68hc11_port.html">M68HC11
 port</a></h2>
 <p>This is a port of GCC, GDB and the Binutils for Motorola 68HC11
 (later 68HC12). This port supports 8,16,32 and 64-bits integers
