--- a/htdocs/gcc-2.95/features.html
+++ b/htdocs/gcc-2.95/features.html
@@ -33,8 +33,8 @@
   <ul>
     <li><a href="c++features.html">Many C++ improvements</a>.
     <li><a href="http://gcc.gnu.org/onlinedocs/g77_news.html">Many Fortran improvements</a>.
-    <li><a href="http://sources.redhat.com/java/gcj-announce.txt">Java</a>
-    front-end has been integrated.  A
+    <li><a href="java/gcj-announce.txt">Java</a>
+    front-end has been integrated.
     <a href="../news/javaannounce.html">runtime library</a>
     is available separately.
     <li><a href="../c99status.html">ISO C99 support</a>
