--- a/htdocs/gcc-3.0/criteria.html
+++ b/htdocs/gcc-3.0/criteria.html
@@ -215,7 +215,7 @@ different programming languages.</p>
     <td><a
     href="ftp://ftp.kernel.org/pub/linux/kernel/v2.4/linux-2.4.0.tar.gz">
     linux-2.4.0.tar.gz</a>
-<tr><td><a href="http://www.gnu.org/software/emacs">GNU Emacs</a>
+<tr><td><a href="http://www.gnu.org/software/emacs/">GNU Emacs</a>
     <td>C
     <td>20.6
     <td><a href="ftp://ftp.gnu.org/gnu/emacs/emacs-20.6.tar.gz">
