--- a/htdocs/egcs-1.1/egcs-1.1.1.html
+++ b/htdocs/egcs-1.1/egcs-1.1.1.html
@@ -96,8 +96,8 @@ will update those pages as new information becomes available.
 
 <p> The EGCS project would like to thank the numerous people that have
 contributed new features, test results, bugfixes, etc.  This 
-<a href="../thanks.html">amazing group of volunteers </a> is what makes
-EGCS successful.
+<a href="http://gcc.gnu.org/thanks.html">amazing group of volunteers </a>
+is what makes EGCS successful.
 
 <p>And finally, we can't in good conscience fail to mention some
 <a href="caveats.html">caveats</a> to using EGCS 1.1.1.
