--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -383,7 +383,7 @@ targets as they appear.
 
 <dt><b>August 31, 1999</b></dt>
 <dd>Cygnus Solutions has released
-<a href="ftp://sources.redhat.com/pub/java/libgcj-2.95.1.tar.gz">libgcj
+<a href="ftp://gcc.gnu.org/pub/java/libgcj-2.95.1.tar.gz">libgcj
 version 2.95.1</a> Java runtime libraries for use with GCC 2.95.1.
 </dd>
 
@@ -401,7 +401,7 @@ from the
 <a href="libstdc++/">libstdc++ project's home page</a>.
 
 <p>Cygnus Solutions has released
-<a href="ftp://sources.redhat.com/pub/java/libgcj-2.95.tar.gz">libgcj
+<a href="ftp://gcc.gnu.org/pub/java/libgcj-2.95.tar.gz">libgcj
 version 2.95</a> Java runtime libraries for use with GCC 2.95.
 </dd>
 
@@ -509,7 +509,7 @@ that tracks checkins to the egcs webpages CVS repository.
 <a href="http://www.cygnus.com/">Cygnus</a> announces the first public
 release of libgcj, the runtime component of the GNU compiler for Java.
 <br><a href="news/javaannounce.html">Read the release announcement</a>.
-<br><a href="http://sources.redhat.com/java/">Goto the libgcj homepage</a>.
+<br><a href="java/">Goto the libgcj homepage</a>.
 </dd>
 
 <dt><b>April 6, 1999</b></dt>
@@ -620,8 +620,7 @@ processor.
 
 <dt><b>November 5, 1998</b></dt>
 <dd>The third snapshot of the rewritten <tt>libstdc++</tt> is available.
-You can read some more on <a href="libstdc++/">
-http://sources.redhat.com/libstdc++/</a>.
+You can read some more on <a href="libstdc++/">libstdc++/</a>.
 </dd>
 
 <dt><b>October 27, 1998</b></dt>
@@ -714,7 +713,7 @@ framework</b></a>.
   The egcs web pages are now supported by egcs project hardware and
   are searchable with webglimpse.  The <a href="cvs.html">CVS</a>
   sources are browsable with the free <a
-  href="http://www.freebsd.org/~fenner/cvsweb/">cvsweb</a> package.
+  href="http://people.freebsd.org/~fenner/cvsweb/">cvsweb</a> package.
 </dd>
 
 <dt><b>February 7, 1998</b></dt>
