2001-10-01  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
        * index.html: Update link to GCC 3.0.
CVa: ----------------------------------------------------------------------

--- a/htdocs/libstdc++/index.html
+++ b/htdocs/libstdc++/index.html
@@ -3,7 +3,7 @@
  <meta NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
  <title>Standard C++ Library v3</title>
 <link REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: index.html,v 1.15 2001/09/17 15:51:48 pme Exp $ -->
+<!-- $Id: index.html,v 1.16 2001/09/17 23:03:03 pme Exp $ -->
 </head>
 <body>
 
@@ -43,7 +43,7 @@
 <dl>
  <dt>2001-06-18
  <dd> First major compiler release using libstdc++-v3 by default,
-   <a href="http://gcc.gnu.org/gcc-3.0/gcc-3.0.html">GCC 3.0</a>.
+   <a href="http://gcc.gnu.org/gcc-3.0/">GCC 3.0</a>.
  <dt>2001-04-06
  <dd> Eleventh snapshot release, <a href="download.html">libstdc++-2.92.tar.gz</a>.
  <dt>2000-11-17
