* docs.html: Fix broken/redirected links. 	* download.html: Ditto. 	* faq-portugese.html: Ditto. 	* old-news.html: Ditto. 	* thanks.html: Ditto.

--- a/htdocs/java/docs.html
+++ b/htdocs/java/docs.html
@@ -88,7 +88,7 @@ conferences and magazines.
       Integration</cite>" (February 1998) for the programmer's manual.
       <br>[<a href="papers/native++.html">HTML</a>] 
           [<a href="papers/native++.sgml">SGML/Docbook source</a>]
-      <br>Author: <a href="http://www.cygnus.com/~bothner/">Per Bothner</a>.
+      <br>Author: <a href="http://www.bothner.com/">Per Bothner</a>.
       <p>
 
   <li><b>October 1997</b>: "<cite>Compiling Java for Embedded
@@ -97,8 +97,7 @@ conferences and magazines.
       overview of our strategy and plans at the time.  This is fairly
       out of date now.
 
-      <br>[<a href="http://www.cygnus.com/news/whitepapers/compiling.html">HTML</a>] 
-          [<a href="papers/compjava.pdf">PDF</a>] 
+      <br>[<a href="papers/compjava.pdf">PDF</a>] 
           [<a href="papers/compjava.ps.gz">gzip'd Postscript</a>] 
           [<a href="papers/esc97.sgml">SGML/Docbook source</a>] 
           [<a href="papers/esc97w-slides.ps.gz">PS 
