--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -103,9 +103,9 @@ You can also view the libgcj component cvs archive: the
 and <A HREF="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/fastjar/">fastjar</A>.
 <p>
 Here's the Java front end <a
-href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/java">cvs
+href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/java/">cvs
 archive</a> (the entire compiler is also 
-<a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc">available</a>.)
+<a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/">available</a>.)
 
 </GCJNAV>
 
