--- a/htdocs/java/faq-portugese.html
+++ b/htdocs/java/faq-portugese.html
@@ -498,7 +498,7 @@ Eu estava trabalhando nisto, mas est&aacute; voltando ao forno agora. Ent&atilde
 se algu&eacute;m pudesse me ajudar eu apreciaria. Tenho uma implementa&ccedil;&atilde;o
 gr&aacute;tis
 de RMI ("NinjaRMI") que &eacute; muito parecida com o RMI da Sun. Voc&ecirc;
-pode baix&aacute;-la de <a href="http://www.cs.berkeley.edu/%7Emdw/proj/ninja">http://www.cs.berkeley.edu/~mdw/proj/ninja</a></dd>
+pode baix&aacute;-la de <a href="http://www.cs.berkeley.edu/%7Emdw/proj/ninja/">http://www.cs.berkeley.edu/~mdw/proj/ninja</a></dd>
 </dl>
 
 <dd>
