--- a/htdocs/java/old-news.html
+++ b/htdocs/java/old-news.html
@@ -46,7 +46,7 @@ find bugs!
 <b>February 8, 2001</b>
 </td><td>
 Made use of Warren Levy's change to the
-<A HREF="http://sources.redhat.com/mauve">Mauve test suite</A> to handle
+<A HREF="http://sources.redhat.com/mauve/">Mauve test suite</A> to handle
 regressions.
 Modifications have been made to <tt>mauve.exp</tt> to copy the newly created
 <tt>xfails</tt> file of known library failures from the source tree
@@ -248,8 +248,7 @@ Tom Tromey wrote most of <code>java.awt.event</code>.
 <tr><td valign="top">
 <b>April 3, 2000</b>
 </td><td>
-Anthony Green made
-<a href="ftp://sources.redhat.com/pub/java/rpm/">RPMs</a>
+Anthony Green made RPMs
 of gcj and libgcj.  See his original
 <a href="http://gcc.gnu.org/ml/java/2000-04/msg00022.html">message</a> for some caveats.
 </td></tr>
@@ -281,7 +280,7 @@ Warren Levy checked in the basics of the <code>java.security.*</code> packages
 that he and Tom Tromey have been putting together.  It is just the basics
 of <code>java.security</code> and some of it is indeed stubbed.  It has been
 tried with the 20000120 snapshot of 
-<a href="http://www.cryptix.org/products/jce">Cryptix JCE</a>
+<a href="http://www.cryptix.org/products/jce/">Cryptix JCE</a>
 so it is usable.
 
 Please note that it is mostly JDK 1.1 based but there are some JDK 1.2
