--- a/htdocs/java/thanks.html
+++ b/htdocs/java/thanks.html
@@ -44,7 +44,7 @@ IA-64 libffi port, and other work.
 <li>The <a href="http://www.classpath.org">GNU Classpath project</a> for all of their merged runtime code.
 <li>Mo DeJong for gcj and libgcj bug fixes.
 <li>The GCC project <a
-href="http://gcc.cygnus.com/thanks.html">contributors</a> for all of their
+href="http://gcc.gnu.org/thanks.html">contributors</a> for all of their
 great compiler work.
 <li>Ivan Fontes Garcia for the Portugese translation of the FAQ.
 <li>John Gilmore for a donation to the FSF earmarked improving GNU Java.
