2001-09-29  Alexandre Petit-Bianco  <apbianco@redhat.com>
	* paper/table.gif: Deleted.
	* paper/page.gif: Deleted.
	* paper/cygnus-logo-notype-small.gif: Deleted.
	* paper/table.png: New file.
	* paper/page.png: New file.
	* paper/nosb.html (cygnus-logo-notype-small.gif): Table entry removed.
	(table.png): Replaces table.gif.
	(page.png): Replaces page.gif.

--- a/htdocs/java/papers/nosb.html
+++ b/htdocs/java/papers/nosb.html
@@ -9,8 +9,6 @@
 &nbsp;
 <TABLE BORDER=0 CELLSPACING=0 WIDTH="100%" CELLPADING="0" >
 <TR>
-<TD><A HREF="http://www.cygnus.com/"><IMG SRC="cygnus-logo-notype-small.gif" ALT="Cygnus Logo" BORDER=0 HEIGHT=82 WIDTH=82></A></TD>
-
 <TD>
 <H1>
 No Silver Bullet - Garbage Collection for Java in Embedded Systems</H1>
@@ -382,7 +380,7 @@ of the memory allocations serving particular purposes are linked to a
 dedicated GC function set:
 <p>
 	<center>
-	<img src="table.gif">
+	<img src="table.png">
 	</center>
 <p>
 <i>Allocating garbage collected memory</i>
@@ -435,7 +433,7 @@ a state flag and also retains color information. A page of garbage
 collected memory intended to store small objects is organized as:
 <p>
 	<center>
-	<img src="page.gif">
+	<img src="page.png">
 	</center>
 	<ul><font size=-1>
         The size of this entire block is typically the system's page
