2001-10-01  Alexandre Petit-Bianco  <apbianco@redhat.com>
	* done.html (PAL): Fix URL to project page
	(ADFC): Likewise.

( http://gcc.gnu.org/ml/java-patches/2001-q4/msg00002.html )

--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -81,7 +81,7 @@
 	    GCJ.
 	</td>
 
-	<td><a href="http://www.pal-project.org/">The PAL Project</a>
+	<td><a href="http://users.ox.ac.uk/~strimmer/pal/">The PAL Project</a>
 	    submitted by
 	    <a href="mailto:korbinian.strimmer@zoology.oxford.ac.uk">
 	    Korbinian Strimmer</a>.
@@ -146,7 +146,7 @@
 	    </quote>
 	</td>
 	<td>The <A
-	    HREF="http://www.dfc.icai.upco.es/balrog/adfc.html">ADFC</A>
+	    HREF="http://www.dfc.icai.upco.es/invest/adfc/adfc.html">ADFC</A>
 	    page. <A HREF="http://gcc.gnu.org/ml/java/2001-01/msg00228.html">
 	    Entry</A> submitted by <A HREF="mailto:balrog@amena.com">
 	    Alejandro Rodríguez Gallego</A>.
